--- a/no_account.css lists/body.css
+++ b/no_account.css lists/body.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap');
+
 .create_account_button {
     position: absolute;
-    left: 35.26%;
-    right: 25%;
+    left: 375px;
+    right: 0px;
     top: 271px;
     bottom: 20.57%;    
 
@@ -14,10 +16,10 @@
 }
 
 .create_account_text {
-    position: center;
-    left: 43.26%;
-    right: 45.28%;
-    top: 28.41%;
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 30%;
     bottom: 70.17%;
 
     font-family: 'Comfortaa', cursive;
@@ -31,10 +33,10 @@
 
 .no_account {
     position: absolute;
-    left: 28.15%;
-    right: 25%;
+    left: 284px;
+    right: 0px;
     top: 178px;
-    bottom: 20.57%;    
+    bottom: 0px;    
 
     font-family: 'Comfortaa', cursive;
     font-style: normal;
@@ -47,18 +49,18 @@
 
 .progress_taskbar {
     position: absolute;
-    left: 17.5%;
-    right: 12.42%;
-    top: 20.59%;
-    bottom: 83.6%;
+    left: 265px;
+    right: 0px;
+    top: 148px;
+    bottom: 0px;
 }
 
 .circle {
     position: absolute;
-    left: 17.5%;
-    right: 77.34%;
-    top: 10.59%;
-    bottom: 84.25%;
+    left: 0px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
 
     height: 80px;
     width: 74.29px;
@@ -71,8 +73,7 @@
 .left_rect,
 .right_rect {
     position: absolute;
-    left: 23.47%;
-    right: 53.24%;
+    right: 0px;
     top: 35px;
     bottom: 40%;
 
