--- a/no_account.css lists/header.css
+++ b/no_account.css lists/header.css
@@ -6,15 +6,16 @@
     bottom: 89.15%;
 
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.085) 0%, rgba(196, 196, 196, 0) 100%);
+    justify-content: center;
 }
 
 .eatmi_box,
 .eatmi_icon {
     position: absolute;
-    left: 2.71%;
-    right: 92.29%;
-    top: 2.03%;
-    bottom: 94.32%;
+    left: 21px;
+    right: 1000px;
+    top: 3px;
+    bottom: 1000;
 
     height: 72px;
     width: 72px;
@@ -42,7 +43,7 @@
     position: absolute;
     left: 4%;
     right: 90.5%;
-    top: -2%;
+    top: -4px;
     bottom: 93.48%;
 
     font-size: 22px;
@@ -58,10 +59,10 @@
     padding: 0px;
     
     position: absolute;
-    left: 12.36%;
-    right: 55.69%;
-    top: 2.19%;
-    bottom: 95.67%;
+    left: 187px;
+    right: 200px;
+    top: 3px;
+    bottom: 1000px;
 }
 
 .our_story_box {
@@ -136,10 +137,10 @@
     padding: 0px;
     
     position: absolute;
-    left: 74.72%;
-    right: 2.57%;
-    top: 1.81%;
-    bottom: 95.16%;
+    left: 1135px;
+    right: 0px;
+    top: 3px;
+    bottom: 1000px;
 }
 
 .bag {
@@ -158,7 +159,7 @@
 .sign_up_button {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     padding: 0px;
     
     position: absolute;
@@ -182,7 +183,7 @@
     width: 80px;
     height: 32px;
     left: 24px;
-    top: -22px;   
+    top: -24px;   
 
     color: #000000;
 }
