--- a/no_account.css lists/style.css
+++ b/no_account.css lists/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1&display=swap');
+
+html,
+body {
+    justify-content: left;
+}
+
 arrow1,
 arrow2 {
     position: absolute;
@@ -26,7 +33,7 @@ bag2 {
 
 credit_card {
     position: absolute;
-    left: 43.5%;
+    left: 464px;
     right: 25.49%;
     top: 22px;
     bottom: 72.42%;
@@ -36,7 +43,7 @@ credit_card {
 
 house {
     position: absolute;
-    left: 83.96%;
+    left: 892px;
     right: 12.12%;
     top: 22px;
     bottom: 85.87%;
@@ -132,18 +139,18 @@ FAQS {
 
 term_condition {
     position: absolute;
-    left: 12.64%;
-    right: 75.69%;
-    top: 85.55%;
-    bottom: 2.58%;
+    left: 193px;
+    right: 0px;
+    top: 395px;
+    bottom: 0px;
 }
 
 privacy_policy {
     position: absolute;
-    left: 27.64%;
-    right: 63.26%;
-    top: 85.55%;
-    bottom: 2.58%;
+    left: 420px;
+    right: 0px;
+    top: 395px;
+    bottom: 0px;
 }
 
 our_story,
