--- a/no_account.css (ไทย) lists/body (ไทย).css
+++ b/no_account.css (ไทย) lists/body (ไทย).css
@@ -1,28 +1,35 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
+
 .create_account_button {
     position: absolute;
-    left: 35.26%;
-    right: 25%;
-    top: 271px;
+    left: 375px;
+    right: 0px;
+    top: 263px;
     bottom: 20.57%;    
+    z-index: -1;
 
     width: 230px;
     height: 48px;
 
-    background: #F4D06F;
+    background: #F9B609;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
+
+    cursor: pointer;
 }
 
 .create_account_text {
-    position: center;
-    left: 43.26%;
-    right: 45.28%;
-    top: 28.41%;
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 30%;
     bottom: 70.17%;
+    z-index: -1;
 
     font-family: 'Comfortaa', cursive;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 700;
     font-size: 22px;
     line-height: 22px;
 
@@ -31,10 +38,11 @@
 
 .no_account {
     position: absolute;
-    left: 34.77%;
-    right: 25%;
-    top: 178px;
-    bottom: 20.57%;    
+    left: 284px;
+    right: 0px;
+    top: 168px;
+    bottom: 0px;    
+    z-index: -1;
 
     font-family: 'Comfortaa', cursive;
     font-style: normal;
@@ -47,22 +55,35 @@
 
 .progress_taskbar {
     position: absolute;
-    left: 17.5%;
-    right: 12.42%;
-    top: 20.59%;
-    bottom: 83.6%;
+    left: 275px;
+    right: 0px;
+    top: 292px;
+    bottom: 0px;
 }
 
-.circle {
+.circle1 {
     position: absolute;
-    left: 17.5%;
-    right: 77.34%;
-    top: 10.59%;
-    bottom: 84.25%;
+    left: 20px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
 
     height: 80px;
     width: 74.29px;
-    left: 20px;
+    border-radius: 80px;    
+
+    background: #FECC2F;
+}
+
+.circle2 {
+    position: absolute;
+    left: 452px;
+    right: 0px;
+    top: 5px;
+    bottom: 0px;
+
+    height: 80px;
+    width: 74.29px;
     border-radius: 80px;    
 
     background: #FECC2F;
@@ -71,8 +92,7 @@
 .left_rect,
 .right_rect {
     position: absolute;
-    left: 23.47%;
-    right: 53.24%;
+    right: 0px;
     top: 35px;
     bottom: 40%;
 
