--- a/no_account.css (ไทย) lists/header (ไทย).css
+++ b/no_account.css (ไทย) lists/header (ไทย).css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+1:wght@500&display=swap');
 
@@ -28,7 +29,7 @@
 .Eng_Thai,
 .option1,
 .option2 {
-    font-family: 'M PLUS 1', sans-serif;
+    font-family: 'IBM Plex Sans Thai', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 22px;
@@ -57,7 +58,8 @@
     right: 90.35%;
     top: -6.1%;
     bottom: 92.64%;
-    
+ 
+    font-family: 'M PLUS 1', sans-serif;
     font-weight: 400;
     line-height: 35px;
 
@@ -80,7 +82,7 @@
 
 .shop_text {
     position: absolute;
-    width: 55px;
+    width: 90px;
     height: 32px;
     left: 146px;
     top: 0px;
@@ -94,9 +96,8 @@
 
 .our_story_text {
     position: absolute;
-    width: 106px;
-    height: 32px;
-    left: 480px;
+    width: 300px;
+    left: 460px;
     top: -12px;
 }
 
@@ -240,7 +241,7 @@
     width: 100px;
     height: 32px;
     left: auto;
-    top: -24px;  
+    top: -20px;  
     
     color: #F9B609;
 }
@@ -250,7 +251,7 @@
     width: 79px;
     height: 47px;
     left: 220px;
-    top: 20px;
+    top: 23px;
     
     font-size: 24px;
     line-height: 35px;
