--- a/no_account.css (ไทย) lists/body (ไทย).css
+++ b/no_account.css (ไทย) lists/body (ไทย).css
@@ -42,7 +42,117 @@
     right: 0px;
     top: 168px;
     bottom: 0px;    
+    z-index: -1;@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap');
+
+.create_account_button {
+    position: absolute;
+    left: 375px;
+    right: 0px;
+    top: 263px;
+    bottom: 20.57%;    
     z-index: -1;
+
+    width: 230px;
+    height: 48px;
+
+    background: #F9B609;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+
+    cursor: pointer;
+}
+
+.create_account_text {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 30%;
+    bottom: 70.17%;
+    z-index: -1;
+
+    font-family: 'IBM Plex Sans Thai', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 22px;
+
+    color: #000000;
+}
+
+.no_account {
+    position: absolute;
+    left: 383px;
+    right: 0px;
+    top: 168px;
+    bottom: 0px;    
+
+    font-family: 'IBM Plex Sans Thai', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 31px;
+
+    color: #000000;
+}
+
+.progress_taskbar {
+    position: absolute;
+    left: 275px;
+    right: 0px;
+    top: 292px;
+    bottom: 0px;
+}
+
+.circle1 {
+    position: absolute;
+    left: 20px;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+
+    height: 80px;
+    width: 74.29px;
+    border-radius: 80px;    
+
+    background: #FECC2F;
+}
+
+.circle2 {
+    position: absolute;
+    left: 452px;
+    right: 0px;
+    top: 5px;
+    bottom: 0px;
+
+    height: 80px;
+    width: 74.29px;
+    border-radius: 80px;    
+
+    background: #FECC2F;
+}
+
+.left_rect,
+.right_rect {
+    position: absolute;
+    right: 0px;
+    top: 35px;
+    bottom: 40%;
+
+    background: #EBD1B9;
+    border-radius: 15px;
+
+    height: 14.86px;
+    width: 335.35px;
+    border-radius: 15px;    
+}
+
+.left_rect {
+    left: 105.76px;
+}
+
+.right_rect {
+    left: 535.57px;
+}
 
     font-family: 'Comfortaa', cursive;
     font-style: normal;
