--- a/no_account.css lists/style.css
+++ b/no_account.css lists/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+1&display=swap');
-
 html,
 body {
     justify-content: left;
@@ -8,14 +6,14 @@ body {
 arrow1,
 arrow2 {
     position: absolute;
-    width: 20px;
-    height: 30px;
-    left: 136px;
-    top: 2px;    
+    width: 10px;
+    height: 15px;
+    left: 137px;
+    top: 19px;    
 }
 
-arrow2 {
-    left: 153px;
+arrow1 {
+    left: 158px;
 }
 
 bag1 {
@@ -25,28 +23,38 @@ bag1 {
     top: 22px;
 }
 
-bag2 {
+bag2,
+bag3 {
     font-size: 45px;
     margin-left: 18px; 
     margin-top: 15px
 }
+bag3 {
+    margin-left: 38px; 
+}
 
-credit_card {
+credit_card,
+credit_in_circle {
     position: absolute;
     left: 464px;
-    right: 25.49%;
+    right: 0px;
     top: 22px;
-    bottom: 72.42%;
+    bottom: 0px;
 
     font-size: 45px;
+}
+
+credit_in_circle {
+    left: 12px;
+    top: 17px;
 }
 
 house {
     position: absolute;
     left: 892px;
-    right: 12.12%;
+    right: 0px;
     top: 22px;
-    bottom: 85.87%;
+    bottom: 0px;
 
     font-size: 45px;
 }
@@ -110,7 +118,7 @@ my_profile {
     width: 192px;
     height: 55px;
     left: 375px;
-    top: 56px;
+    top: 53px;
 }
 
 my_coupon {
@@ -118,7 +126,7 @@ my_coupon {
     width: 194px;
     height: 55px;
     left: 375px;
-    top: 111px;
+    top: 107px;
 }
 
 order_history {
@@ -126,7 +134,7 @@ order_history {
     width: 192px;
     height: 36px;
     left: 375px;
-    top: 166px;
+    top: 159px;
 }
 
 FAQS {
@@ -134,7 +142,7 @@ FAQS {
     width: 54px;
     height: 29px;
     left: 620px;
-    top: 58px;
+    top: 53px;
 }
 
 term_condition {
